--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -41,21 +41,28 @@
         </tr>
       </table>
       
-      <%= form_with model: [@book, @book_comment], local: false do |f| %>
+         
+      <% @book.book_comments.each do |book_comment| %>
+      <table class='table'>
+        <tr>
+          <td>
+            <%= image_tag book_comment.user.get_profile_image, size: '80x80' %><br>
+            <%= book_comment.user.name %>
+          </td>
+          <td><%= book_comment.comment %></td>
+          <td>
+            <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger" %>
+         </td>
+        </tr>
+        <% end %>
+     </table>
+     <%= form_with model: [@book, @book_comment], local: false do |f| %>
          <%= f.text_area :comment, rows: '5', size: "80" %>
            <div class="text-right">
             <%= f.submit "送信" %>
            </div>
       <% end %>
-         
-      <% @book.book_comments.each do |book_comment| %>
-        <div class="col-3 text-center">
-           <%= image_tag book_comment.user.get_profile_image(100,100) %>
-           <div class="small mb-4"><%= book_comment.user.name %>
-          </div>
-        </div>
-      <%= link_to "Destroy", book_comment_path(comment.book, comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn-sm btn-danger" %></td>
-      <% end %>
+      
     </div>
   </div>
 </div>
