--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,22 +17,8 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
-            <% if @book.favorited_by?(current_user) %>
-              <p>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                  ♥<%= @book.favorites.count %> 
-                <% end %>
-              </p>
-              <% else %>
-              <p>
-                <%= link_to book_favorites_path(@book), method: :post do %>
-                  ♡<%= @book.favorites.count %> 
-                <% end %>
-              </p>
-            <% end %>
-          </td>
-          <td><%= link_to "コメント数:#{@book.book_comments.count}", book_path(@book.id) %></td>
+          <td id="favorite_buttons_<%= @book.id %>"><%= render 'favorites/favorite-btn',book: @book %></td>
+          <td id= "comments_counter_<%= @book.id %>"><%= render "book_comments/counter", book: @book %></td>
           
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -41,27 +27,8 @@
         </tr>
       </table>
       
-         
-      <% @book.book_comments.each do |book_comment| %>
-      <table class='table'>
-        <tr>
-          <td>
-            <%= image_tag book_comment.user.get_profile_image, size: '80x80' %><br>
-            <%= book_comment.user.name %>
-          </td>
-          <td><%= book_comment.comment %></td>
-          <td>
-            <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn-sm btn-danger" %>
-         </td>
-        </tr>
-        <% end %>
-     </table>
-     <%= form_with model: [@book, @book_comment], local: false do |f| %>
-         <%= f.text_area :comment, rows: '5', size: "80" %>
-           <div class="text-right">
-            <%= f.submit "送信" %>
-           </div>
-      <% end %>
+     <div id="comments_index_<%= @book.id %>"><%= render 'book_comments/index', book: @book %></div>
+     <div><%= render 'book_comments/form', book: @book, book_comment: @book_comment %></div>
       
     </div>
   </div>
